Fix for QuadStack scrollbars rendering below children.
This patch fixes the QuadStack scrollbars to render above
its child QuadView elements.

The fixed scrollbars can be seen in the frame viewer:
http://philbit.com/scrollbars.png

BUG=
R=nduca@chromium.org

Review URL: https://codereview.appspot.com/9852043

--- a/src/ui/quad_stack.css
+++ b/src/ui/quad_stack.css
@@ -7,6 +7,7 @@ quad-stack {
   position: relative;
   outline: none;
   overflow: scroll;
+  z-index: 10; /* cause our scrollbars to render above our children. */
 }
 
 quad-stack > view-container {
@@ -14,12 +15,10 @@ quad-stack > view-container {
   display: -webkit-flex;
   outline: none;
   position: relative;
-  z-index: 10;
 }
 
 quad-stack quad-view {
   -webkit-transform: translateZ(0); /* actual xform for depth is set in rAF */
   position: absolute;
   top: 0;
-  z-index: -10; /* cause quad views to render under container scrollbars */
 }
